Refactor transport delivery to selected-worker handoff
Move assigned-delivery handoff toward a selected-worker queue model and decouple route-owner endpoint facts from the delivery hot path. Introduces DeliveryQueueOffer/DeliveryCommandReference changes (queueConsumerKey + adapterId/leaseDeadline), new delivery/runtime types (AssignedDeliveryCommandQueueKey, DeliveryCommandConsumerClaim, DeliveryCommandConsumerRegistry, DeliveryCommandConsumerProjectingRouteOwnerStore), and a large roadmap (TRANSPORT_DELIVERY_EXECUTOR_RESIDUE_CONVERGENCE_ROADMAP.md). Update MassApplication to attach the projecting route-owner store when a handoff is present and remove direct WorkerDispatchRouteOwnerView usage; adjust builder constant and many transport/adapters/tests to use deliveryQueueKey and selected-worker consumer evidence. Also update docs/proof registry and related transport roadmap to reflect the new contract and handoff semantics.